# Donut-Samples

./: CMakeLists.txt
.github/workflows/: cla.yml
examples/aftermath/: CMakeLists.txt
examples/basic_compute/: CMakeLists.txt  basic_compute.cpp  particles.hlsl  particles_cb.h  shaders.cfg  test_simple.hlsl
examples/basic_triangle/: CMakeLists.txt
examples/bindless_rendering/: CMakeLists.txt
examples/headless/: CMakeLists.txt
examples/meshlets/: CMakeLists.txt
examples/rt_bindless/: CMakeLists.txt
examples/rt_particles/: CMakeLists.txt
examples/rt_reflections/: CMakeLists.txt
examples/rt_shadows/: CMakeLists.txt  rt_shadows.cpp
examples/rt_triangle/: CMakeLists.txt  rt_triangle.cpp
examples/shader_specializations/: CMakeLists.txt
examples/tensor/: CMakeLists.txt  README.md  shaders.cfg  simple_dx12_cuda.cpp  simple_interop.hlsl  simple_kernel.cu  tensor_cb.h
examples/variable_shading/: CMakeLists.txt
examples/vertex_buffer/: CMakeLists.txt
examples/work_graphs/: CMakeLists.txt  README.md  work_graphs_d3d12.cpp
feature_demo/: CMakeLists.txt  FeatureDemo.cpp
